tests/test_proof/good/no_vars.catala_en
## Test

```catala
declaration scope A:
  output x content integer

scope A:
  definition x under condition (6*7 = 42) and (false or (true and 1458 / 27 = 54.))
  consequence equals 0
```


```catala-test-inline
$ catala Typecheck --check-invariants
[RESULT] Invariant typing_defaults checked. result: [24/24]
[RESULT] Invariant match_inversion checked. result: [0/0]
[RESULT] Invariant app_inversion checked. result: [0/0]
[RESULT] Invariant no_return_a_function checked. result: [0/0]
[RESULT] Invariant no_partial_evaluation checked. result: [0/0]
[RESULT] Invariant default_no_arrow checked. result: [2/2]
[RESULT] Typechecking successful!
```

```catala-test-inline
$ catala Proof --disable-counterexamples 
[RESULT] No errors found during the proof mode run.
```
