tests/test_proof/bad/no_vars-empty.catala_en
## Test


```catala
declaration scope A:
  context x content integer
  context y content integer

scope A:
  definition x under condition (6*7 = 42) and (false or (true and 1458 / 27 = 54))
  consequence equals 1

  definition y under condition x <= 0 consequence equals -1
  definition y under condition x >= 2 consequence equals 1
  
```